syntax = "proto3";

package tasks;

service TaskAnalysisService {
  rpc GetTaskStats (GetTaskStatsRequest) returns (GetTaskStatsResponse);
  rpc GetTasksByLevel (GetTasksByLevelRequest) returns (GetTasksByLevelResponse);
}

message GetTaskStatsRequest {}

message TaskLevel {
  string level = 1;  // Define el nivel como un string
  int32 count = 2;   // El n√∫mero de tareas en ese nivel
}

message GetTaskStatsResponse {
  int32 total_tasks = 1;
  repeated TaskLevel levels = 2;
}

message GetTasksByLevelRequest {
  string level = 1;  // Nivel de las tareas a buscar
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string level = 4;
}

message GetTasksByLevelResponse {
  repeated Task tasks = 1;
}
